--- a/C5_Frontend/proyecto-final-techtalent/src/index.html
+++ b/C5_Frontend/proyecto-final-techtalent/src/index.html
@@ -3,60 +3,109 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TFT Services</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <style>
-        body {
-            padding: 20px;
-        }
-        .header, .footer {
-            background-color: #f8f9fa;
-            padding: 10px;
-        }
-        .main-content {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 20px;
-        }
-        .main-content .left, .main-content .right {
-            width: 48%;
-        }
-    </style>
+    <title>VALODI Services</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="header">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">TFT Services</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
-                    </li>
-                </ul>
+    <!-- Navigation Bar -->
+    <nav class="navbar">
+        <div class="logo">
+            <a href="#">VALODI Services</a>
+        </div>
+        <ul class="nav-links">
+            <li><a href="#">Sobre nosotros</a></li>
+            <li><a href="#">Servicios</a></li>
+            <li><a href="#">Productos</a></li>
+            <li><a href="#">Colaboradores</a></li>
+        </ul>
+        <div class="auth-buttons">
+            <a href="#" class="login-btn">Login</a>
+            <a href="#" class="signup-btn">Sign Up</a>
+        </div>
+    </nav>
+    
+    <!-- Existing Content -->
+    <div class="video-banner">
+        <iframe src="skate.png" frameborder="0" allowfullscreen></iframe>
+    </div>
+    <div class="container">
+        <div class="info-box">
+            <div class="info-container">
+                <div class="info-icon Equipo"><img src="equipo-icon.png" alt="Equipo"></div>
+                <div class="info-icon FAQ"><img src="faq-icon.png" alt="FAQ"></div>
+                <div class="info-icon Ubicación"><img src="ubicacion-icon.png" alt="Ubicación"></div>
+                <div class="info-icon Valores"><img src="valores-icon.png" alt="Valores"></div>
             </div>
-        </nav>
-    </header>
-    <main class="main-content">
-        <div class="left">
-            <h2>Popular Products/Services</h2>
-            <!-- Add content here -->
         </div>
-        <div class="right">
-            <h2>RSS Feed</h2>
-            <!-- Add content here -->
+        <div class="slider-container">
+            <div class="slider">
+                <div class="slides">
+                    <div class="slide"><img src="image1.jpeg" alt="Image 1"></div>
+                    <div class="slide"><img src="image2.jpeg" alt="Image 2"></div>
+                    <div class="slide"><img src="image3.jpeg" alt="Image 3"></div>
+                </div>
+            </div>
         </div>
-    </main>
+        <div class="social-box">
+            <div class="social-icons">
+                <div class="social-icon facebook"><img src="facebook-icon.png" alt="Facebook"></div>
+                <div class="social-icon twitter"><img src="twitter-icon.png" alt="Twitter"></div>
+                <div class="social-icon instagram"><img src="instagram-icon.png" alt="Instagram"></div>
+                <div class="social-icon linkedin"><img src="linkedin-icon.png" alt="LinkedIn"></div>
+            </div>
+        </div>
+    </div>
+    <div class="contact-section">
+        <h3>Atencion al Cliente</h3>
+        <div class="contact-content">
+            <form class="contact-form">
+                <input type="text" placeholder="Your Name" required>
+                <input type="email" placeholder="Your Email" required>
+                <textarea placeholder="Your Message" rows="4" required></textarea>
+                <button type="submit">Enviar</button>
+            </form>
+        </div>
+    </div>
     <footer class="footer">
-        <p>&copy; 2023 TFT Services</p>
+        <p>&copy; 2024 VALODI Services</p>
     </footer>
+
+    <script>
+        let currentSlide = 0;
+        const slides = document.querySelectorAll('.slide');
+        const totalSlides = slides.length;
+
+        function showSlide(index) {
+            const slider = document.querySelector('.slider');
+            slider.style.transform = `translateX(-${index * 100}%)`;
+        }
+
+        function nextSlide() {
+            currentSlide = (currentSlide + 1) % totalSlides;
+            showSlide(currentSlide);
+        }
+
+        document.addEventListener('DOMContentLoaded', () => {
+            showSlide(currentSlide);
+            setInterval(nextSlide, 3000); // Moves to the next slide every 3 seconds
+        });
+
+        // Add this script to handle the navbar contraction
+        const navbar = document.querySelector('.navbar');
+        const navLinks = document.querySelector('.nav-links');
+        const authButtons = document.querySelector('.auth-buttons');
+
+        window.addEventListener('scroll', () => {
+            if (window.scrollY > 50) {
+                navLinks.classList.add('hidden');
+                authButtons.classList.add('hidden');
+                navbar.classList.add('shrink');
+            } else {
+                navLinks.classList.remove('hidden');
+                authButtons.classList.remove('hidden');
+                navbar.classList.remove('shrink');
+            }
+        });
+    </script>
 </body>
 </html>
