--- a/C5_Frontend/proyecto-final-techtalent/src/index.html
+++ b/C5_Frontend/proyecto-final-techtalent/src/index.html
@@ -26,7 +26,7 @@
     
     <!-- Existing Content -->
     <div class="video-banner">
-        <iframe src="skate.png" frameborder="0" allowfullscreen></iframe>
+        <iframe src="background.png" frameborder="0" allowfullscreen></iframe>
     </div>
     <div class="container">
         <div class="info-box">
@@ -56,7 +56,7 @@
         </div>
     </div>
     <div class="contact-section">
-        <h3>Atencion al Cliente</h3>
+        <h3>CONTACTO:</h3>
         <div class="contact-content">
             <form class="contact-form">
                 <input type="text" placeholder="Your Name" required>
