--- a/C5_Frontend/proyecto-final-techtalent/src/index.html
+++ b/C5_Frontend/proyecto-final-techtalent/src/index.html
@@ -40,9 +40,9 @@
         <div class="slider-container">
             <div class="slider">
                 <div class="slides">
-                    <div class="slide"><img src="image1.jpeg" alt="Image 1"></div>
-                    <div class="slide"><img src="image2.jpeg" alt="Image 2"></div>
-                    <div class="slide"><img src="image3.jpeg" alt="Image 3"></div>
+                    <div class="slide"><img src="image1.png" alt="Image 1"></div>
+                    <div class="slide"><img src="image2.png" alt="Image 2"></div>
+                    <div class="slide"><img src="image3.png" alt="Image 3"></div>
                 </div>
             </div>
         </div>
@@ -59,15 +59,23 @@
         <h3>CONTACTO:</h3>
         <div class="contact-content">
             <form class="contact-form">
-                <input type="text" placeholder="Your Name" required>
-                <input type="email" placeholder="Your Email" required>
-                <textarea placeholder="Your Message" rows="4" required></textarea>
+                <input type="text" placeholder="Nombre y apellidos" required>
+                <input type="email" placeholder="E-mail" required>
+                <input type="text" placeholder="Núm. teléfono" required>
+                <textarea placeholder="Comentarios..." rows="1" optional></textarea>
+                <select required>
+                    <option value="servicios" disabled selected>Selecciona un servicio</option>
+                    <option value="servicio1">Servicio 1</option>
+                    <option value="servicio2">Servicio 2</option>
+                    <option value="servicio3">Servicio 3</option>
+                    <option value="servicio4">Servicio 4</option>
+                </select>
                 <button type="submit">Enviar</button>
             </form>
         </div>
     </div>
     <footer class="footer">
-        <p>&copy; 2024 VALODI Services</p>
+        <p>&copy; 2024 VALODI Group Services Distribution</p>
     </footer>
 
     <script>
