--- a/C5_Frontend/proyecto-final-techtalent/src/index.html
+++ b/C5_Frontend/proyecto-final-techtalent/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VALODI Services</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -26,32 +27,32 @@
     
     <!-- Existing Content -->
     <div class="video-banner">
-        <iframe src="background.png" frameborder="0" allowfullscreen></iframe>
+        <iframe src="images/background.png" frameborder="0" allowfullscreen></iframe>
     </div>
     <div class="container">
         <div class="info-box">
             <div class="info-container">
-                <div class="info-icon Equipo"><img src="equipo-icon.png" alt="Equipo"></div>
-                <div class="info-icon FAQ"><img src="faq-icon.png" alt="FAQ"></div>
-                <div class="info-icon Ubicación"><img src="ubicacion-icon.png" alt="Ubicación"></div>
-                <div class="info-icon Valores"><img src="valores-icon.png" alt="Valores"></div>
+                <div class="info-icon Equipo"><img src="images/equipo-icon.png" alt="Equipo"></div>
+                <div class="info-icon FAQ"><img src="images/faq-icon.png" alt="FAQ"></div>
+                <div class="info-icon Ubicación"><img src="images/ubicacion-icon.png" alt="Ubicación"></div>
+                <div class="info-icon Valores"><img src="images/valores-icon.png" alt="Valores"></div>
             </div>
         </div>
         <div class="slider-container">
             <div class="slider">
                 <div class="slides">
-                    <div class="slide"><img src="image1.png" alt="Image 1"></div>
-                    <div class="slide"><img src="image2.png" alt="Image 2"></div>
-                    <div class="slide"><img src="image3.png" alt="Image 3"></div>
+                    <div class="slide"><img src="images/image1.png" alt="Image 1"></div>
+                    <div class="slide"><img src="images/image2.png" alt="Image 2"></div>
+                    <div class="slide"><img src="images/image3.png" alt="Image 3"></div>
                 </div>
             </div>
         </div>
         <div class="social-box">
             <div class="social-icons">
-                <div class="social-icon facebook"><img src="facebook-icon.png" alt="Facebook"></div>
-                <div class="social-icon twitter"><img src="twitter-icon.png" alt="Twitter"></div>
-                <div class="social-icon instagram"><img src="instagram-icon.png" alt="Instagram"></div>
-                <div class="social-icon linkedin"><img src="linkedin-icon.png" alt="LinkedIn"></div>
+                <div class="social-icon facebook"><img src="images/facebook-icon.png" alt="Facebook"></div>
+                <div class="social-icon twitter"><img src="images/twitter-icon.png" alt="Twitter"></div>
+                <div class="social-icon instagram"><img src="images/instagram-icon.png" alt="Instagram"></div>
+                <div class="social-icon linkedin"><img src="images/linkedin-icon.png" alt="LinkedIn"></div>
             </div>
         </div>
     </div>
