--- a/C5_Frontend/proyecto-final-techtalent/src/index.html
+++ b/C5_Frontend/proyecto-final-techtalent/src/index.html
@@ -8,77 +8,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-    <!-- Navigation Bar -->
-    <nav class="navbar">
-        <div class="logo">
-            <a href="#">VALODI Services</a>
-        </div>
-        <ul class="nav-links">
-            <li><a href="#">Sobre nosotros</a></li>
-            <li><a href="#">Servicios</a></li>
-            <li><a href="#">Productos</a></li>
-            <li><a href="#">Colaboradores</a></li>
-        </ul>
-        <div class="auth-buttons">
-            <a href="#" class="login-btn">Login</a>
-            <a href="#" class="signup-btn">Sign Up</a>
-        </div>
-    </nav>
-    
-    <!-- Existing Content -->
-    <div class="video-banner">
-        <iframe src="images/background.png" frameborder="0" allowfullscreen></iframe>
-    </div>
-    <div class="container">
-        <div class="info-box">
-            <div class="info-container">
-                <div class="info-icon Equipo"><img src="images/equipo-icon.png" alt="Equipo"></div>
-                <div class="info-icon FAQ"><img src="images/faq-icon.png" alt="FAQ"></div>
-                <div class="info-icon Ubicación"><img src="images/ubicacion-icon.png" alt="Ubicación"></div>
-                <div class="info-icon Valores"><img src="images/valores-icon.png" alt="Valores"></div>
-            </div>
-        </div>
-        <div class="slider-container">
-            <div class="slider">
-                <div class="slides">
-                    <div class="slide"><img src="images/image1.png" alt="Image 1"></div>
-                    <div class="slide"><img src="images/image2.png" alt="Image 2"></div>
-                    <div class="slide"><img src="images/image3.png" alt="Image 3"></div>
-                </div>
-            </div>
-        </div>
-        <div class="social-box">
-            <div class="social-icons">
-                <div class="social-icon facebook"><img src="images/facebook-icon.png" alt="Facebook"></div>
-                <div class="social-icon twitter"><img src="images/twitter-icon.png" alt="Twitter"></div>
-                <div class="social-icon instagram"><img src="images/instagram-icon.png" alt="Instagram"></div>
-                <div class="social-icon linkedin"><img src="images/linkedin-icon.png" alt="LinkedIn"></div>
-            </div>
-        </div>
-    </div>
-    <div class="contact-section">
-        <h3>CONTACTO:</h3>
-        <div class="contact-content">
-            <form class="contact-form">
-                <input type="text" placeholder="Nombre y apellidos" required>
-                <input type="email" placeholder="E-mail" required>
-                <input type="text" placeholder="Núm. teléfono" required>
-                <textarea placeholder="Comentarios..." rows="1" optional></textarea>
-                <select required>
-                    <option value="servicios" disabled selected>Selecciona un servicio</option>
-                    <option value="servicio1">Servicio 1</option>
-                    <option value="servicio2">Servicio 2</option>
-                    <option value="servicio3">Servicio 3</option>
-                    <option value="servicio4">Servicio 4</option>
-                </select>
-                <button type="submit">Enviar</button>
-            </form>
-        </div>
-    </div>
-    <footer class="footer">
-        <p>&copy; 2024 VALODI Group Services Distribution</p>
-    </footer>
-
+    <app-root></app-root>
     <script>
         let currentSlide = 0;
         const slides = document.querySelectorAll('.slide');
